--- a/languages/promote-mdn-it_IT.po
+++ b/languages/promote-mdn-it_IT.po
@@ -5,194 +5,306 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Promote MDN 1.5.0\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/promote-mdn\n"
-"POT-Creation-Date: 2013-05-22 15:12:57+00:00\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-04-10 14:47+0100\n"
+"POT-Creation-Date: 2016-02-11 15:47+0100\n"
+"PO-Revision-Date: 2016-02-11 15:51+0100\n"
 "Last-Translator: Mte90 <mte90net@gmail.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.7.3\n"
+"X-Generator: Poedit 1.8.7\n"
+"Plural-Forms: nplurals=2; plural=n == 1 ? 0 : 1;\n"
+"X-Poedit-KeywordsList: __;_e;_n;_x;esc_html_e;esc_html__;esc_attr_e;"
+"esc_attr__;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;_x:1,2c;_n:1,2\n"
+"X-Poedit-Basepath: ..\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Poedit-SearchPath-0: .\n"
 
-#: promote-mdn.php:205
+#: promote-mdn.php:231
 msgid "Reloaded values from the URL."
 msgstr "Carica di nuovo i valori dalla URL."
 
-#: promote-mdn.php:224
+#: promote-mdn.php:253
 msgid "Plugin settings saved."
 msgstr "Impostazioni del plugin salvate."
 
-#: promote-mdn.php:263
-msgid "MDN is your Web Developer Toolbox for docs, demos and more on HTML, CSS, JavaScript and other Web standards and open technologies."
-msgstr "MDN è la tua cassetta degli strumenti per lo Sviluppo Web con documentazione, demo e altro su HTML, CSS, JavaScript e gli altri standard Web e le tecnologie open."
+#: promote-mdn.php:301
+msgid ""
+"MDN is your Web Developer Toolbox for docs, demos and more on HTML, CSS, "
+"JavaScript and other Web standards and open technologies."
+msgstr ""
+"MDN è la tua cassetta degli strumenti per lo Sviluppo Web con "
+"documentazione, demo e altro su HTML, CSS, JavaScript e gli altri standard "
+"Web e le tecnologie open."
 
-#: promote-mdn.php:266
-msgid "MDN is the best online resource - for web developers, by web developers."
-msgstr "MDN è la miglior risorsa online per gli sviluppatori web dagli sviluppatori web."
+#: promote-mdn.php:304
+msgid ""
+"MDN is the best online resource - for web developers, by web developers."
+msgstr ""
+"MDN è la miglior risorsa online per gli sviluppatori web dagli sviluppatori "
+"web."
 
-#: promote-mdn.php:267
-msgid "Promote MDN automatically links keywords and phrases in your posts and pages to MDN URLs."
-msgstr "Promote MDN automaticamente inserisce un link per le parole chiave e le frasi nei tuoi post e pagine verso le pagine di MDN."
+#: promote-mdn.php:305
+msgid "Promote MDN:"
+msgstr "Promuovi MDN:"
 
-#: promote-mdn.php:274
+#: promote-mdn.php:307
+msgid ""
+"Automatically links keywords and phrases in your posts and pages to MDN URLs."
+msgstr ""
+"Automaticamente inserisce un link per le parole chiave e le frasi nei tuoi "
+"post e pagine verso le pagine di MDN."
+
+#: promote-mdn.php:308
+msgid "Provides a widget with images and links to promote MDN."
+msgstr "Fornisce un widget come immagini e link per promuovere MDN."
+
+#: promote-mdn.php:309
+msgid ""
+"Allows you to notify Mozilla DevEngage and Communications when publishing "
+"posts"
+msgstr ""
+"Permette di notificare il Mozilla DevEngage and Communication team quando "
+"pubblichi un post"
+
+#: promote-mdn.php:312
+msgid ""
+"Promote MDN is open source. <a href=\"https://github.com/mdn/wp-promote-mdn"
+"\">Contribute on GitHub</a>"
+msgstr ""
+"Promote MDN é open source. <a href=\"https://github.com/mdn/wp-promote-mdn"
+"\">Contribuisci su GitHub</a>"
+
+#: promote-mdn.php:319
 msgid "Settings"
 msgstr "Impostazioni"
 
-#: promote-mdn.php:275
+#: promote-mdn.php:320
 msgid "Load keywords from URL:"
 msgstr "Carica le parole chiave dalla URL:"
 
-#: promote-mdn.php:277
+#: promote-mdn.php:322
 msgid "Preview"
 msgstr "Anteprima"
 
-#: promote-mdn.php:278
+#: promote-mdn.php:323
+#, php-format
 msgid "Use keywords and links specifically for %s"
 msgstr "Usa le parole chiave e inserisci un link solo su %s"
 
-#: promote-mdn.php:278
+#: promote-mdn.php:323
 msgid "Switch to locale-specific list"
 msgstr "Cambia la lista secondo la lingua"
 
-#: promote-mdn.php:279
+#: promote-mdn.php:324
 msgid "Reload keywords after (seconds):"
 msgstr "Ricarica le parole chiave dopo (secondi):"
 
-#: promote-mdn.php:280
+#: promote-mdn.php:325
 msgid "Reload now"
 msgstr "Ricarica adesso"
 
-#: promote-mdn.php:282
+#: promote-mdn.php:327
 msgid "Add links to RSS feeds"
 msgstr "Aggiungi i link ai Feed RSS"
 
-#: promote-mdn.php:283
-msgid "Include src url param (Helps MDN measure effectiveness)"
-msgstr "Includi il parametro src nella url (Aiuta MDN per tracciare l'utilizzo)"
+#: promote-mdn.php:328
+msgid "Add links to comments"
+msgstr "Aggiungi i link ai commenti"
 
-#: promote-mdn.php:284
+#: promote-mdn.php:329
+msgid "Include src url params (Helps MDN measure effectiveness)"
+msgstr ""
+"Includi il parametro src nella url (Aiuta MDN per tracciare l'utilizzo)"
+
+#: promote-mdn.php:330
 msgid "Open links in new window"
 msgstr "Apri i link in una nuova finestra"
 
-#: promote-mdn.php:287
+#: promote-mdn.php:333
 msgid "Exceptions"
 msgstr "Eccezioni"
 
-#: promote-mdn.php:289
-msgid "Do not add links inside the following HTML elements (comma-separated, partial-matching):"
-msgstr "Non aggiungere link dentro i seguenti tag HTML (separati dalla virgola, verifica parziale)"
+#: promote-mdn.php:335
+msgid "Do not add links to any <em>pages</em>."
+msgstr "Non aggiungere nessun link nelle <em>pagine</em>."
 
-#: promote-mdn.php:291
-msgid "Do not add links to the following posts or pages (comma-separated id, slug, name):"
-msgstr "Non aggiungere link ai seguenti post o pagine (id separati da virgole, slug, name)"
+#: promote-mdn.php:336
+msgid "Do not add links to any <em>posts</em>."
+msgstr "Non aggiungere link a nessun <em>articolo</em>."
 
-#: promote-mdn.php:293
+#: promote-mdn.php:346
+#, php-format
+msgid "Do not add links to any <em>%s</em>."
+msgstr "Non aggiungere link a nessun <em>%s</em>."
+
+#: promote-mdn.php:350
+msgid ""
+"Do not add links to the following posts or pages (comma-separated id, slug, "
+"name):"
+msgstr ""
+"Non aggiungere link ai seguenti post o pagine (id separati da virgole, slug, "
+"name)"
+
+#: promote-mdn.php:352
+msgid ""
+"Do not add links inside the following HTML elements (comma-separated, "
+"partial-matching):"
+msgstr ""
+"Non aggiungere link dentro i seguenti tag HTML (separati dalla virgola, "
+"verifica parziale)"
+
+#: promote-mdn.php:354
 msgid "Do not add links on the following phrases (comma-separated):"
 msgstr "Non aggiungere link nelle seguenti frasi (separate da virgola)"
 
-#: promote-mdn.php:297
+#: promote-mdn.php:358
 msgid "Limits"
 msgstr "Limiti"
 
-#: promote-mdn.php:298
+#: promote-mdn.php:359
 msgid "Max links to generate per post:"
 msgstr "Link massimi generati per post:"
 
-#: promote-mdn.php:299
+#: promote-mdn.php:359
+msgid "(0 to disable all links)"
+msgstr "(0 per disabilitare tutti i link)"
+
+#: promote-mdn.php:360
 msgid "Max links to generate for a single keyword/phrase:"
 msgstr "Link massimi generati per ogni singola parola chiave/frase:"
 
-#: promote-mdn.php:300
+#: promote-mdn.php:361
 msgid "Max links to generate for a single URL:"
 msgstr "Link massimi generati per una singola URL:"
 
-#: promote-mdn.php:303
+#: promote-mdn.php:364
 msgid "Custom Keywords"
 msgstr "Parole chiavi:"
 
-#: promote-mdn.php:304
-msgid "Extra keywords to automaticaly link. Use comma to seperate keywords and add target url at the end. Use a new line for new url and set of keywords. e.g.,"
-msgstr "Parole chiave extra in cui inserire il link in automatico. Usa la virgola per separare le parole chiave ed aggiungere una url di riferimento alla fine. Usa una nuova linea per una nuova url e imposta una parola chiave. Es:"
+#: promote-mdn.php:365
+msgid ""
+"Extra keywords to automaticaly link. Use comma to seperate keywords and add "
+"target url at the end. Use a new line for new url and set of keywords. e.g.,"
+msgstr ""
+"Parole chiave extra in cui inserire il link in automatico. Usa la virgola "
+"per separare le parole chiave ed aggiungere una url di riferimento alla "
+"fine. Usa una nuova linea per una nuova url e imposta una parola chiave. Es:"
 
-#: promote-mdn.php:311
-msgid "Note: These keywords will take priority over those loaded at the URL. If you have too many custom keywords here, you may not link to MDN at all."
-msgstr "Nota: Queste parole chiave avranno la priorità su quelle caricate dalla URL. Se vuoi altre parole chiave qui, puoi non inserire link a MDN."
+#: promote-mdn.php:371
+msgid ""
+"Note: These keywords will take priority over those loaded at the URL. If you "
+"have too many custom keywords here, you may not link to MDN at all."
+msgstr ""
+"Nota: Queste parole chiave avranno la priorità su quelle caricate dalla URL. "
+"Se vuoi altre parole chiave qui, puoi non inserire link a MDN."
 
-#: promote-mdn.php:312
+#: promote-mdn.php:372
 msgid "Update options"
 msgstr "Aggiorna opzioni"
 
-#: promote-mdn.php:335
-msgid "Thanks for installing! Go to the <a href=\"%s\">settings</a> page to configure, and the <a href=\"%s\">widgets</a> page to add widget."
-msgstr "Grazie per l'installazione! Vai alla pagina <a href=\"%s\">impostazioni</a> per configurare e alla pagina <a href=\"%s\">widgets</a> per aggiungere il widget."
+#: promote-mdn.php:401
+#, php-format
+msgid ""
+"Thanks for installing! Go to the <a href=\"%1$s\">settings</a> page to "
+"configure, and the <a href=\"%2$s\">widgets</a> page to add widget."
+msgstr ""
+"Grazie per l'installazione! Vai alla pagina <a href=\"%1$s\">impostazioni</"
+"a> per configurare e alla pagina <a href=\"%2$s\">widgets</a> per aggiungere "
+"il widget."
 
-#: promote-mdn.php:336
-msgid "fr_FR translation, new sidebar <a href=\"%s\">widget</a>, <a href=\"%s\">setting</a> for a locale-specific URL for keywords."
-msgstr "traduzione francese, nuova sidebar <a href=\"%s\">widget</a>, <a href=\"%s\">impostazioni</a> per una URL con lingua specifica  per le parole chiave."
+#: promote-mdn.php:402
+msgid ""
+"You can now notify Mozilla Press and DevRel teams via email when you publish "
+"your posts!"
+msgstr ""
+"Ora puoi notificare Mozilla Press e DevRel team via email quando pubblichi "
+"un post!"
 
-#: promote-mdn.php:337
-msgid "You can exclude links from any HTML elements, not just headers; include a src url param on links; text and color options for the <a href=\"%s\">widget</a>"
-msgstr "Puoi escludere i link da qualunque elemento HTML, non solo gli header; include un parametro src sui link; testo e le opzioni colori per i <a href=\"%s\">widget</a>"
+#: promote-mdn.php:403
+msgid ""
+"You can now use the new graphics for the Widget and links in the comments!"
+msgstr ""
+"Ora puoi usare le nuove grafiche per il Widget e avere i link nei commenti!"
 
-#: promote-mdn.php:338
-msgid "Security fixes."
-msgstr "Fix di sicurezza"
-
-#: promote-mdn.php:385 promote-mdn.php:416 promote-mdn.php:445
+#: promote-mdn.php:453 promote-mdn.php:484
 msgid "Promote MDN"
 msgstr "Promuovi MDN"
 
-#: promote-mdn.php:385
+#: promote-mdn.php:453
 msgid "hide"
 msgstr "nascondi"
 
-#: promote-mdn.php:417
+#: promote-mdn.php:485
 msgid "Sidebar image and links to MDN."
 msgstr "Immagine per la sidebar e link per MDN."
 
-#: promote-mdn.php:446
+#: promote-mdn.php:525
+msgid "Help Promote MDN!"
+msgstr "Aiuta Promote MDN!"
+
+#: promote-mdn.php:526
 msgid "Get the WordPress plugin"
 msgstr "Scarica il Plugin WordPress"
 
-#: promote-mdn.php:455
+#: promote-mdn.php:536
 msgid "Gray"
 msgstr "Grigio"
 
-#: promote-mdn.php:456
+#: promote-mdn.php:537
 msgid "Red"
 msgstr "Rosso"
 
-#: promote-mdn.php:457
+#: promote-mdn.php:538
 msgid "Orange"
 msgstr "Arancione"
 
-#: promote-mdn.php:468
+#: promote-mdn.php:563
 msgid "Color:"
 msgstr "Colore:"
 
-#: promote-mdn.php:479
+#: promote-mdn.php:574
 msgid "Text:"
 msgstr "Testo:"
 
-#. Plugin Name of the plugin/theme
-msgid "Promote MDN"
-msgstr "Promuovi MDN"
+#: promote-mdn.php:588
+msgid "Banner:"
+msgstr "Banner:"
 
-#. Plugin URI of the plugin/theme
-msgid "http://github.com/groovecoder/wp-promote-mdn"
-msgstr "http://github.com/mdn/wp-promote-mdn"
+#: promote-mdn.php:645
+msgid "Notify Mozilla"
+msgstr "Notifica Mozilla"
 
-#. Description of the plugin/theme
-msgid "Promote MDN automatically links keywords phrases to MDN docs"
-msgstr "Promote MDN automaticamente aggiunge un link alla documentazione MDN per le parole chiave"
+#: promote-mdn.php:656
+msgid "Notify Mozilla of this post"
+msgstr "Notifica Mozilla di questo post"
 
-#. Author of the plugin/theme
-msgid "Luke Crouch"
-msgstr ""
+#~ msgid ""
+#~ "fr_FR translation, new sidebar <a href=\"%s\">widget</a>, <a href=\"%s"
+#~ "\">setting</a> for a locale-specific URL for keywords."
+#~ msgstr ""
+#~ "traduzione francese, nuova sidebar <a href=\"%s\">widget</a>, <a href=\"%s"
+#~ "\">impostazioni</a> per una URL con lingua specifica  per le parole "
+#~ "chiave."
 
-#. Author URI of the plugin/theme
-msgid "http://groovecoder.com"
-msgstr ""
+#~ msgid ""
+#~ "You can exclude links from any HTML elements, not just headers; include a "
+#~ "src url param on links; text and color options for the <a href=\"%s"
+#~ "\">widget</a>"
+#~ msgstr ""
+#~ "Puoi escludere i link da qualunque elemento HTML, non solo gli header; "
+#~ "include un parametro src sui link; testo e le opzioni colori per i <a "
+#~ "href=\"%s\">widget</a>"
 
+#~ msgid "Security fixes."
+#~ msgstr "Fix di sicurezza"
+
+#~ msgid "http://github.com/groovecoder/wp-promote-mdn"
+#~ msgstr "http://github.com/mdn/wp-promote-mdn"
+
+#~ msgid "Promote MDN automatically links keywords phrases to MDN docs"
+#~ msgstr ""
+#~ "Promote MDN automaticamente aggiunge un link alla documentazione MDN per "
+#~ "le parole chiave"
